--- a/.github/workflows/terraform_cli.yml
+++ b/.github/workflows/terraform_cli.yml
@@ -49,7 +49,7 @@ jobs:
         tf_actions_subcommand: 'validate'
         tf_actions_working_dir: "./terraform"
         
-    - name: 'Terraform Plan'
+    - name: 'Terraform Plan -lock=false'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.14.8
