--- a/.github/workflows/terraform_cli.yml
+++ b/.github/workflows/terraform_cli.yml
@@ -49,11 +49,11 @@ jobs:
         tf_actions_subcommand: 'validate'
         tf_actions_working_dir: "./terraform"
         
-    - name: 'Terraform Plan -lock=false'
+    - name: 'Terraform Plan'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'plan'
+        tf_actions_subcommand: 'plan -lock=false'
         tf_actions_working_dir: "./terraform"
 
     - name: 'Terraform Apply'
@@ -61,5 +61,5 @@ jobs:
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'apply  -var "prefix=${{github.run_number}}"'
+        tf_actions_subcommand: 'apply  -var "prefix=kdidi${{github.run_number}}"'
         tf_actions_working_dir: "./terraform"
