--- a/.github/workflows/terraform_cli.yml
+++ b/.github/workflows/terraform_cli.yml
@@ -53,7 +53,7 @@ jobs:
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'plan -lock=false'
+        tf_actions_subcommand: 'plan'
         tf_actions_working_dir: "./terraform"
 
     - name: 'Terraform Apply'
