terraform_subcommand args

--- a/.github/workflows/terraform_cli.yml
+++ b/.github/workflows/terraform_cli.yml
@@ -54,6 +54,7 @@ jobs:
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'plan'
+        args: '-lock=false'
         tf_actions_working_dir: "./terraform"
 
     - name: 'Terraform Apply'
@@ -62,4 +63,5 @@ jobs:
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'apply  -var "prefix=kdidi${{github.run_number}}"'
+        args: '-var=prefix=kdidi${{github.run_number}}'
         tf_actions_working_dir: "./terraform"
