--- a/.github/workflows/terraform_cli.yml
+++ b/.github/workflows/terraform_cli.yml
@@ -62,6 +62,6 @@ jobs:
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'apply  -var "prefix=kdidi${{github.run_number}}"'
+        tf_actions_subcommand: 'apply'
         args: '-var=prefix=kdidi${{github.run_number}}'
         tf_actions_working_dir: "./terraform"
