--- a/.github/workflows/terraform_cloud.yml
+++ b/.github/workflows/terraform_cloud.yml
@@ -22,7 +22,7 @@ jobs:
       
     - name: Terraform Format
       id: fmt
-      run: terraform fmt -check
+      run: terraform fmt
       working-directory: './terraform-cloud'
 
     - name: Terraform Init
