--- a/.github/workflows/terraform_cloud.yml
+++ b/.github/workflows/terraform_cloud.yml
@@ -3,7 +3,7 @@ name: 'Terraform Cloud'
 on:
   push:
     branches: [ main ]
-  # pull_request:
+  pull_request:
   #   branches: [ main ]
     
 jobs:
@@ -11,9 +11,11 @@ jobs:
   Terraform:
     name: 'Terraform Cloud'
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
@@ -22,7 +24,7 @@ jobs:
       
     - name: Terraform Format
       id: fmt
-      run: terraform fmt
+      run: terraform fmt -check
       working-directory: './terraform-cloud'
 
     - name: Terraform Init
