Fix bug state blob is already locked

--- a/.github/workflows/terraform_cli.yml
+++ b/.github/workflows/terraform_cli.yml
@@ -64,5 +64,5 @@ jobs:
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'apply'
-        args: '-var=prefix=kdidi${{github.run_number}}'
+        args: '-var=prefix=kdidi${{github.run_number}} -lock=false'
         tf_actions_working_dir: './terraform-cli'
