Change deprecated argument

--- a/.github/workflows/terraform_cloud.yml
+++ b/.github/workflows/terraform_cloud.yml
@@ -11,6 +11,7 @@ jobs:
   Terraform:
     name: 'Terraform Cloud'
     runs-on: ubuntu-latest
+    environment: staging
 
     steps:
     - name: Checkout
