--- a/.github/workflows/terraform_cloud.yml
+++ b/.github/workflows/terraform_cloud.yml
@@ -25,7 +25,7 @@ jobs:
       
     - name: Terraform Format
       id: fmt
-      run: terraform fmt -check
+      run: terraform fmt #-check
       working-directory: './terraform-cloud'
 
     - name: Terraform Init
